// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plain Blank line: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [],
    "type": "line",
  },
]
`;

exports[`plain Keep tail space: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "text": "Tail space ->  ",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`plain Simple plain text: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "text": "Plain text",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;
